[gd_scene load_steps=5 format=3 uid="uid://bj80057dc046u"]

[ext_resource type="Theme" uid="uid://wwwdqjtvax0k" path="res://assets/menu_theme.tres" id="1_my66k"]
[ext_resource type="Script" path="res://Main Menu.gd" id="2_5cuwc"]
[ext_resource type="PackedScene" uid="uid://cvmrqbvh3wu0j" path="res://scenes/options.tscn" id="3_w63go"]
[ext_resource type="AudioStream" uid="uid://bqw3rlay3o1ii" path="res://audio/menu_music_loop.ogg" id="4_v6qdh"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_my66k")
script = ExtResource("2_5cuwc")

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -243.5
offset_top = -132.0
offset_right = 243.5
offset_bottom = 132.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="CenterContainer2" type="CenterContainer" parent="Container"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="RichTextLabel" type="RichTextLabel" parent="Container/CenterContainer2"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 72
text = "Maybe Down?"
fit_content = true
autowrap_mode = 0

[node name="CenterContainer" type="CenterContainer" parent="Container"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Container/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="Play" type="Button" parent="Container/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Options" type="Button" parent="Container/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Exit" type="Button" parent="Container/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="options" parent="." instance=ExtResource("3_w63go")]
visible = false
layout_mode = 1

[node name="MenuMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_v6qdh")
autoplay = true
bus = &"Music"

[connection signal="pressed" from="Container/CenterContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Container/CenterContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Container/CenterContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="back" from="options" to="." method="_on_options_back"]
